--- a/app/templates/src/index.html
+++ b/app/templates/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{{ page.title }}</title>
+    <title><%= projectName %></title>
     <script>document.documentElement.className="has-js"</script>
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
@@ -12,25 +12,19 @@
     <meta name="description" content="">
     <link rel="stylesheet" href="resources/css/main.css">
     <script src="resources/js/init.js"></script>
-    <script src="resources/js/main.js"></script>
 </head>
 <body>
-    <div id="wrap">
-        <div id="main">
-            <header id="hd">
-                <h1><a href="index.html">{{ page.title }}</a></h1>
-            </header>
-            <div id="container">
-                {% include main-navigation.html %}
-                <div id="ct" role="main">
-                    {{ content }}
-                </div>
-            </div>
+    <div id="main">
+        <header id="hd">
+            <h1><a href="index.html"><%= projectName %></a></h1>
+        </header>
+        <div id="ct" role="main">
+            <h2>content</h2>
         </div>
         <footer id="ft">
             <p>footer</p>
         </footer>
-    </div><% if (!addServeTask) { %>{% if site.devMode %}
-    <script src="http://localhost:1337/livereload.js"></script>{% endif %}<% } %>
+    </div>
+    <script src="resources/js/main.js"></script>
 </body>
 </html>
