--- a/app/templates/src/css/main.scss
+++ b/app/templates/src/css/main.scss
@@ -6,5 +6,13 @@
 body {
     h1 {
         content: "gruntlate";
+    }<% if (featureModernizr) { %>
+    // modernizr example
+    html.csstransforms & {
+        color: #0f0;
     }
+
+    html.no-csstransforms & {
+        color: #f00;
+    }<% } %>
 }
