[CLEANUP] Removes old livereload html include

--- a/app/templates/src/jekyll/_layouts/default.html
+++ b/app/templates/src/jekyll/_layouts/default.html
@@ -30,7 +30,6 @@
         <footer id="ft">
             <p>footer</p>
         </footer>
-    </div><% if (!addServeTask) { %>{% if site.devMode %}
-    <script src="http://localhost:1337/livereload.js"></script>{% endif %}<% } %>
+    </div>
 </body>
 </html>
