--- a/app/templates/src/jekyll/_layouts/default.html
+++ b/app/templates/src/jekyll/_layouts/default.html
@@ -10,8 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
     <meta name="description" content="">
-    <link rel="stylesheet" href="resources/css/main.css">
-    <script src="resources/js/init.js"></script>
+    <link rel="stylesheet" href="resources/css/main.css"><% if (((projectType == "website") && (featureModernizr || (moduleLoader == "requirejs"))
+    || ((projectType == "module") && (addDocumentation && (featureModernizr || (moduleLoader == "requirejs"))))) { %>
+    <script src="resources/js/init.js"></script><% } %>
     <script src="resources/js/main.js"></script>
 </head>
 <body>
