--- a/app/templates/src/index.html
+++ b/app/templates/src/index.html
@@ -10,8 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
     <meta name="description" content="">
-    <link rel="stylesheet" href="resources/css/main.css">
-    <script src="resources/js/init.js"></script>
+    <link rel="stylesheet" href="resources/css/main.css"><% if (featureModernizr || (moduleLoader == "requirejs")) { %>
+    <script src="resources/js/init.js"></script><% } %>
 </head>
 <body>
     <div id="main">
