--- a/app/templates/src/jekyll/_layouts/default.html
+++ b/app/templates/src/jekyll/_layouts/default.html
@@ -11,7 +11,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="description" content="">
     <link rel="stylesheet" href="resources/css/main.css"><% if (((projectType == "website") && (featureModernizr || (moduleLoader == "requirejs"))
-    || ((projectType == "module") && (addDocumentation && (featureModernizr || (moduleLoader == "requirejs"))))) { %>
+    || ((projectType == "module") && (addDocumentation && (featureModernizr || (moduleLoader == "requirejs")))))) { %>
     <script src="resources/js/init.js"></script><% } %>
     <script src="resources/js/main.js"></script>
 </head>
